styles code seperation comments

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,29 @@ font-weight: 300; (light for body text)
 font-weight: 500; (medium for bold in body text)
 font-weight: 600; (semibold for headings)*/
 
+/* ABOUT page css starts here*/
+
+
+/* BLOG page css starts here*/
+
+
+/* TICKETS page css starts here*/
+
+
+/* GETRAILED page css starts here*/
+
+
+/* CORPORATE page css starts here*/
+
+
+/* FAVOURITES page css starts here*/
+
+
+/* PROFILE page css starts here*/
+
+
+
+/*BASE LAYOUT CSS STARTS HERE*/
 main {
     font-family: "Outfit", sans-serif;
     font-weight: 300;
