attempt to change the columns

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,30 @@ font-weight: 500; (medium for bold in body text)
 font-weight: 600; (semibold for headings)*/
 
 /* ABOUT page css starts here*/
+.about-font-size {
+	font-size: 70px; 
+}
+.subheadings-about-page {
+	font-weight: 800;
+	font-size: 30px; 
+	padding-left: 0%;
+    padding-right: 8%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    width: 100%;
+}
+
+.color-block-about-page {
+    width: 1200px;  
+    padding: 10px; 
+    background-color: #B3298D; 
+  }
+
+.full-width-container {
+    width: 100%; 
+	width: 700px;
+  }
+
 
 
 /* BLOG page css starts here*/
@@ -137,4 +161,5 @@ footer {
     bottom: 0;
     margin-top: 15%;
     color: black;
+}.subheadings-about-page {
 }
