--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,13 @@ font-weight: 600; (semibold for headings)*/
 .about-font-size {
 	font-size: 70px; 
 }
+
+.container-about-page {
+	width: 92%;
+	margin: auto;
+	height: 100%;
+	border: 2px solid #C92F0E; 
+}
 .subheadings-about-page {
 	font-weight: 800;
 	font-size: 30px; 
@@ -45,27 +52,30 @@ font-weight: 600; (semibold for headings)*/
     padding-right: 8%;
     padding-top: 2%;
     padding-bottom: 2%;
+	background-color: #B93D22;
 	width: 30%;
+	margin: 0%;
+	height: 100%; 
     
 }
 
 .padding-of-mission-about-page {
 	padding-left: 8%;
+	background-color: #B93D22;
     padding-right: 8%;
     padding-top: 2%;
     padding-bottom: 2%;
     width: 70%;
+	margin: 0%;
+	height: 100%; 
+    
 }
 
-.full-width-section {
-      width: 100%;
-      background-color: #740318; /* Change this to any color */
-      padding: 50px 0; /* Adds spacing inside the section */
-	padding-left: 8%;
-    padding-right: 8%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-   }
+.main-margin-about-page {
+	margin: 0%;
+	height: 100%;
+}
+
 
 
 
