--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,13 @@ font-weight: 600; (semibold for headings)*/
 /* ABOUT page css starts here*/
 
 /*the logo on the about page*/
+.subheadings-about-page {
+	padding-left: 0%;
+    padding-right: 8%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    width: 100%;
+}
 .logo-about-page {
 	width: 200px; 
     padding-left: 4%;
@@ -60,12 +67,15 @@ font-weight: 600; (semibold for headings)*/
 
 .meet-the-team-about-page {
 	font-size: 50px;
+	line-height: 1.1; 
+	margin: 0; 
+    padding: 0;
 }
 .column-about-page-meet-the-team {
   float: left;
   width: 50%;
-  margin-bottom: 16px;
-  padding: 0 8px;
+  margin-bottom: 8px;
+  padding: 6px;
 }
 
 /* Display the columns below each other instead of side by side on small screens */
