--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,7 @@ font-weight: 600; (semibold for headings)*/
 .column-about-page-meet-the-team {
   float: left;
   width: 50%;
+	width: 300px;
   margin-bottom: 8px;
   padding: 6px;
 }
@@ -238,14 +239,15 @@ h2 {
 
 footer {
     background-color: blue;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-left: 0%;
+    padding-right: 0%;
+    padding-top: 0%;
+    padding-bottom: 0%;
     width: 100%;
+    bottom-padding: 40px 0;
     position: relative;
     bottom: 0;
-    margin-top: 15%;
+    margin-top: 150%;
     color: black;
 } 
 
