--- a/css/styles.css
+++ b/css/styles.css
@@ -222,5 +222,18 @@ footer {
     bottom: 0;
     margin-top: 15%;
     color: black;
-}.subheadings-about-page {
+}
+
+.footer {
+	font-family: "Outfit", "san-serif";
+	font-size: 25px;
+	color: white
+}
+
+.footer2 {
+	font-family: "Outfit", "san-serif";
+	font-size: 15px;
+	color: white
+}
+.subheadings-about-page {
 }
