--- a/css/styles.css
+++ b/css/styles.css
@@ -93,14 +93,12 @@ html, body {
 	font-size: 50px;
 	line-height: 1.1; 
 	margin: 0; 
-    padding: 0;
-	
-	 
+    padding: 0;	 
 }
 .column-about-page-meet-the-team {
   float: left;
-  width: 50%;
-  width: 350px;
+  width: 20%;
+  width: 320px;
   margin-bottom: 2px;
   margin-left: 1px; 
   margin-top: 1px; 
@@ -297,7 +295,7 @@ footer {
     position: relative;
     bottom: 0;
     margin-top: 120%;
-    color: black;
+    color: white;
 } 
 
 .main-background-color {
