--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,13 @@ font-weight: 300; (light for body text)
 font-weight: 500; (medium for bold in body text)
 font-weight: 600; (semibold for headings)*/
 
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+}
+
 /* ABOUT page css starts here*/
 .about-font-size {
 	font-size: 70px; 
@@ -14,17 +21,26 @@ font-weight: 600; (semibold for headings)*/
     margin-bottom: 50% !important;
 }
 
-.about-container-color {
-	background-color: #D0B3FA;
-    min-height: 100%;
-    display: flex;
-    align-items: center; 
-    position: relative;
-    left: 0;
-	max-width: 100% !important;
-    width: 100vw !important;
-    padding-left: 0 !important;
-    padding-right: 0 !important;
+
+
+.full-width-container {
+  width: 100vw; /* Full viewport width */
+  background-color: #f5f5f5; /* Add your desired background color */
+  max-width: 1200px; /* Adjust based on your layout needs */
+  margin: 0 auto; /* Center the container */
+  padding: 0 15px;
+}
+
+
+.row-about-page {
+    margin: 0;
+}
+
+.container-about-page {
+    width: 100%;
+    padding: 0 15px; 
+    margin: 0 auto;
+    max-width: 1200px; /* Adjust based on your layout needs */
 }
 
 .subheadings-about-page {
@@ -36,13 +52,6 @@ font-weight: 600; (semibold for headings)*/
     padding-bottom: 2%;
     width: 100%;
 }
-
-.color-block-about-page {
-    width: 1200px;  
-    padding: 10px; 
-    background-color: #740318; 
-  }
-
 
 /* Everything for the vision part on the about page*/
 .vision-about-page {
@@ -83,7 +92,7 @@ font-weight: 600; (semibold for headings)*/
 .column-about-page-meet-the-team {
   float: left;
   width: 20%;
-  width: 300px;
+  width: 250px;
   margin-bottom: 2px;
   margin-left: 5px; 
   margin-top: 1px; 
@@ -286,7 +295,6 @@ h5 {
     margin-top: 0%;
     color: black;
 }
-
 
 footer {
     background-color: blue;
