--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@ html, body {
 }
 
 
-
 .full-width-container {
   width: 100vw; /* Full viewport width */
   max-width: 1200px; /* Adjust based on your layout needs */
@@ -41,9 +40,6 @@ html, body {
   padding: 0 15px;
 }
 
-.row-about-page {
-    margin: 0;
-}
 
 .container-about-page {
     width: 100%;
@@ -53,7 +49,6 @@ html, body {
 }
 
 .subheadings-about-page {
-	font-weight: 800;
 	font-size: 30px; 
 	padding-left: 0%;
     padding-right: 8%;
@@ -65,17 +60,9 @@ html, body {
 /*font size for about page*/
 .about-font-size {
 	font-size: 100px; 
+	font-weight: 600; 
 }
 
-/*Main about page style*/
-.main-about-page {
-    font-family: "Outfit", sans-serif;
-    font-weight: 300;
-    margin-left: 8%;
-    margin-right: 8%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-} 
 
 /* Everything for the vision part on the about page*/
 .vision-about-page {
@@ -116,7 +103,7 @@ html, body {
 .column-about-page-meet-the-team {
   float: left;
   width: 20%;
-  width: 250px;
+  width: 230px;
   margin-bottom: 2px;
   margin-left: 5px; 
   margin-top: 1px; 
@@ -125,6 +112,10 @@ html, body {
   padding-left: 1%; 
 }
 
+.about-the-team-font-size {
+	font-weight: 600;
+	font-size: 25px;
+}
 /* Display the columns below each other instead of side by side on small screens */
 @media screen and (max-width: 650px) {
 .second-column-about-page-meet-the-team {
@@ -350,3 +341,5 @@ footer {
 	color: white
 }
 
+.about-the-team-font-size {
+}
