--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,10 @@ html, body {
 	font-size: 25px; 
 }
 
+/* CORPORATE page css starts here*/
+
+/* CORPORATE page css ends here*/
+
 /* BLOG page css starts here*/
 
 .blogtitle {
