--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,12 @@ html, body {
 
 /* TICKETS page css starts here*/
 
+.card-link-wrapper:hover {
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
 
 /* CORPORATE page css starts here*/
 .corporate-font-size {
