--- a/css/styles.css
+++ b/css/styles.css
@@ -199,6 +199,10 @@ html, body {
 
 
 /*BASE LAYOUT CSS STARTS HERE*/
+.card-text-white {
+    color: whitesmoke;
+}
+
 main {
     font-family: "Outfit", sans-serif;
     font-weight: 300;
@@ -207,6 +211,15 @@ main {
     margin-top: 2%;
     margin-bottom: 2%;
 }
+
+.index-about-bg {
+    margin-left: 0;
+    margin-right: 0;
+    padding-top: 2%;
+    padding-bottom: 1%;
+    padding-left: 9%;
+    padding-right: 9%;
+  }
 
 h2, h3, h4, h5 {
     font-family: "Outfit", sans-serif;
